# Camera_pro

ROS/: flirBFS_original.cpp
ROS/src/: install_ros.sh  project_setup.md
ROS/src/mjpeg_server/src/: mjpeg_server.cpp
ROS/src/phenobot_camera/: CMakeLists.txt  note.md
ROS/src/phenobot_camera/src/: flirBFS.h  main (copy).cpp  main.cpp  paramListener.cpp  paramListener.h
ROS/src/phenobot_camera/src/backup/: flirBFS.h  paramListener.cpp  paramListener.h
